description is aligned but i need to fix the next, previous and close button

--- a/event-landvanons-app/src/App.css
+++ b/event-landvanons-app/src/App.css
@@ -16,6 +16,22 @@
   height: 50px;
 }
 
+.description-section {
+  margin-left: 20px;
+  word-break: break-all;
+  text-align: justify;
+}
+
+.detail-card {
+  width: auto;
+  padding-right: 20px;
+  padding-left: 20px
+}
+
+.description {
+  width: auto;
+}
+
 .rightside-descriptions {
   position: relative;
   right: 300px;
